--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/server.js",
+    "test": "cypress run",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "cypress": "^14.4.1",
+    "cypress-plugin-api": "^2.11.2",
     "nodemon": "^3.1.10"
   }
 }
