--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
+      - name: ✅ Verificar secrets
+        run: |
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}"
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}"
+
       - name: Exibir variáveis de ambiente (debug)
         run: |
           echo "MONGO_URI=$MONGO_URI"
