--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "cypress": "^14.4.1",
     "cypress-plugin-api": "^2.11.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "wait-on": "^8.0.3"
   }
 }
